# healthypi-move-fw

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FILESYSTEM_CONVERSION_SUMMARY.md  Kconfig  Kconfig.sysbuild  LICENSE  README.md  RELEASE_NOTES.md  VERSION  build.sh  build_nrf_net.sh  config.sh  env_build.sh  flash.sh  flash_merged.sh  flash_net.sh  google-fonts-recommendations.md  manifest_old.yml  octave-workspace  ppg_wrist_state_machine.html  pristine.sh  set_env_nrf.sh  sysbuild.conf  west.yml
.github/: build.yml  (+1 more)
app/: CMakeLists.txt  CMakePresets.json  Kconfig  Kconfig.sysbuild  VERSION  bt-shell.overlay  dis_pm_static.yml  dk_v2.overlay  gg.txt  healthypi_move_nrf5340.overlay  healthypi_move_touch.overlay  linker_arm_extxip.ld  overlay-release.conf  pkl;m_static copy.txt'  pm_static.yml  pm_staticxip.xip  pm_temp_static.tmp  prj.conf  prj_debug.conf  prj_minimal.conf  qspi_w25.ini  sensing_subsys.overlay  sysbuild.cmake  sysbuild.conf  tesysbuild.conf  west.yml
app/boards/protocentral/healthypi_move/: board.yml  healthypi_move_nrf5340_cpuapp.yaml  healthypi_move_nrf5340_cpunet-pinctrl.dtsi  healthypi_move_nrf5340_cpunet.yaml
app/child_image/: hci_ipc.conf  mcuboot.conf
app/child_image/hci_ipc/: prj.conf
app/drivers/: CMakeLists.txt  Kconfig
app/drivers/display/: CMakeLists.txt
app/drivers/input/: CMakeLists.txt  input_chsc5816.c
app/drivers/rtc/: Kconfig.rv8263
app/drivers/sensor/: CMakeLists.txt
app/drivers/sensor/bmi323hpi/: CMakeLists.txt
app/drivers/sensor/max30001/: max30001.c
app/drivers/sensor/max30208/: max30208.c
app/drivers/sensor/max32664c/: max32664c.c  max32664c_async.c  max32664c_msbl_30_13_31.msbl
app/drivers/sensor/max32664d/: Kconfig  max32664d.c  max32664d.h  max32664d_bl.c  max32664d_decoder.c
app/drivers/sensor/maxm86146/: CMakeLists.txt  Kconfig  maxm86146_decoder.c  maxm86146_msbl.h
app/dts/bindings/: maxim,max30205.yaml  maxim,max30208.yaml  maxim,max32664.yaml  maxim,max32664c.yaml
app/dts/bindings/input/: chipsemi,chsc6x.yaml
app/include/: hpi_user_profile.h  recording_module.h
app/scripts/: build.sh  merge.sh
app/src/: algos.c  algos.h  battery_module.c  battery_module.h  battery_profile_200.inc  ble_module.c  ble_module.h  cmd_module.c  cmd_module.h  data_module.c  data_module.h  datalog_module.c  datalog_module.h  day_stats_module.c  day_stats_module.h  display_module.c  display_module.h  fs_module.c  fs_module.h  gsr_algo.h  gsr_algos.c  gsr_algos.h  haptic_module.c  haptic_module.h  hpi_common_settings.h  hpi_common_types.h  hpi_measurement_settings.c  hpi_measurement_settings.h  hpi_settings_persistence.c  hpi_settings_persistence.h  hpi_settings_store.c  hpi_settings_store.h  hpi_sys.h  hpi_sys_module.c  hpi_user_settings_api.c  hpi_user_settings_api.h  hpi_zbus_channels.c  hr_monitor_rtio.c  hr_monitor_rtio.h  hrv_algos.c  (+29 more)
app/src/archived/: ble_module.txt  cmd_module.txt  hw_buttons.txt  max32664_msbl.msbl  max32664d_msbl.c  scr_ecg_plot_arch.txt
app/src/ei/edge-impulse-sdk/classifier/: ei_model_types.h  ei_performance_calibration.h  ei_run_classifier.h  ei_run_dsp.h
app/src/ei/model-parameters/: model_metadata.h  model_variables.h
app/src/ei/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h  trained_model_ops_define.h
app/src/images/: icon_paused.c
app/src/max32664_updater/: CMakeLists.txt  LICENSE  README.md  max32664_updater.c  max32664_updater.h  max32664_updater_fs.c  max32664d_bl.c
app/src/max32664_updater/msbl/: max32664c_30_13_31.c  max32664d_40_6_0.c
app/src/sm/: hpi_ppg_wrist.h  smf_display.c  smf_ecg.h  smf_ecg_bioz.c  smf_ecg_bioz.h  smf_imu.c  smf_ppg_finger.c  smf_ppg_wrist.c
app/src/ui/: hp_ui_common.c  hp_ui_common.c.img_bak  hpi_ppg_autoscale.c  move_ui.h
app/src/ui/components/: hpi_lv_chart.c  hpi_lv_chart.h  ui_comp_dailymissiongroup.c  ui_comp_dailymissiongroup.h  ui_comp_hr_button.c  ui_comp_spo2_button.c  ui_comp_spo2_button.c.img_bak  ui_comp_steps_button.c
app/src/ui/fonts/: README.md  bungee_90.c  caveat_48.c  convert_fonts.sh  font_declarations.h  fredoka_22.c  fredoka_28.c  orbitron_90px.c  oxanium_90.c  ui_font_H1.c  ui_font_Number_big.c  ui_font_Number_extra.c  ui_font_Subtitle.c  ui_font_Title.c  zen_nos_90.c
app/src/ui/images/: bck_heart_200.c  bck_heart_2_180.c  bck_heart_2_200.c  bp_100.c  bp_70.c  bp_80.c  convert.sh  ecg_100.c  ecg_120.c  ecg_45.c  ecg_70.c  fix_headers.sh  heart.c  icon_cancel.c  icon_complete.c  icon_spo2_100.c  icon_spo2_120.c  icon_spo2_30x35.c  img_bpt_finger.c  img_bpt_finger_120.c  img_bpt_finger_45.c  img_bpt_finger_90.c  img_calories_48.c  img_calories_48px.c  img_clock_48px.c  img_complete_100.c  img_complete_85.c  img_convert.sh  img_failed_100.c  img_failed_80.c  img_hand.c  img_heart_120.c  img_heart_35.c  img_heart_48px.c  img_heart_70.c  img_spo2_hand.c  img_steps_48.c  img_steps_48px.c  img_temp_100.c  img_temp_45.c  (+19 more)
app/src/ui/screens/: cleanup_lvgl9.py  fix_lvgl9_all.py  fix_style_size.py  scr_ble.c  scr_boot.c  scr_bpt.c  scr_bpt.c.img_bak  scr_bpt_cal_complete.c  scr_bpt_cal_progress.c  scr_bpt_cal_required.c  scr_bpt_est_complete.c  scr_bpt_failed.c  scr_bpt_measure.c  scr_bpt_measure.c.img_bak  scr_bpt_plot.c  scr_bpt_scr2.c  scr_bpt_scr3.c  scr_bpt_scr4.c  scr_bptplot.txt  scr_clock.c  scr_clock_analog.c  scr_clock_small.c  scr_device_user_settings.c  scr_ecg.c  scr_ecg_complete.c  scr_ecg_plot.c  scr_ecg_scr2.c  scr_eda.c  scr_fi_sens_check.c  scr_fi_sens_check.c.img_bak  scr_fi_sens_wear.c  scr_fi_sens_wear.c.img_bak  scr_finger_contact.c  scr_gsr.c  scr_gsr_complete.c  scr_gsr_measure.c  scr_gsr_plot.c  scr_gsr_trends.c  scr_home.c  scr_hr.c  (+43 more)
app/sysbuild/: b0n.conf  mcuboot.conf
app/sysbuild/ipc_radio/: prj.conf
app/sysbuild/mcuboot/: app.overlay  prj.conf
app/sysbuild/mcuboot/boards/: healthypi_move_nrf5340_cpuapp.conf  healthypi_move_nrf5340_cpuapp.overlay
app/tests/: test_ppg_sm.c
lib/: Kconfig  (+1 more)
lib/max32664_updater/: CMakeLists.txt  Kconfig  max32664_updater.c  max32664_updater.h
lib/max32664_updater/msbl/: max32664d_40_6_0.c  max32664d_40_6_0.h  max32664d_40_6_0.msbl
(+290 files in other folders)
